[gd_scene load_steps=14 format=2]

[ext_resource path="res://LightSpot.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://Particle.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Tree.tscn" type="PackedScene" id=5]
[ext_resource path="res://Boundary.png" type="Texture" id=6]
[ext_resource path="res://Pixeboy-z8XGD.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Music/Cool_arcade_wave.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 304.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 168, 905 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 168, 905 )

[sub_resource type="CircleShape2D" id=4]
radius = 888.381

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 7 )

[node name="World" type="Node"]
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0196078, 0, 0.054902, 1 )
position = Vector2( 564, 368 )
scale = Vector2( 1134, 964 )
z_index = -2
texture = ExtResource( 4 )

[node name="Trees" type="Node2D" parent="."]

[node name="Tree1" parent="Trees" instance=ExtResource( 5 )]
position = Vector2( 468, 15 )

[node name="Tree2" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 552, 15 )

[node name="Tree3" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 625, 32 )

[node name="Tree4" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 702, 78 )

[node name="Tree5" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 753, 133 )

[node name="Tree6" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 791, 197 )

[node name="Tree7" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 811, 270 )

[node name="Tree8" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 811, 353 )

[node name="Tree9" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 791, 427 )

[node name="Tree10" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 750, 495 )

[node name="Tree11" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 689, 557 )

[node name="Tree24" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 629, 590 )

[node name="Tree12" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 553, 611 )

[node name="Tree13" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 476, 611 )

[node name="Tree14" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 393, 590 )

[node name="Tree15" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 330, 552 )

[node name="Tree16" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 273, 494 )

[node name="Tree17" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 237, 435 )

[node name="Tree18" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 212, 350 )

[node name="Tree19" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 214, 271 )

[node name="Tree20" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 234, 193 )

[node name="Tree21" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 271, 128 )

[node name="Tree22" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 327, 73 )

[node name="Tree23" parent="Trees" instance=ExtResource( 5 )]
visible = false
position = Vector2( 392, 34 )

[node name="Planet" type="StaticBody2D" parent="." groups=[
"planet",
]]
position = Vector2( 512, 312 )
collision_layer = 7
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Planet"]
position = Vector2( -512, -312 )
color = Color( 0.12549, 0, 0.247059, 1 )
polygon = PoolVector2Array( 512, 8, 432, 16, 360, 48, 296, 96, 248, 160, 216, 232, 208, 312, 216, 392, 248, 464, 296, 528, 360, 576, 432, 608, 512, 616, 592, 608, 664, 576, 728, 528, 776, 464, 808, 392, 816, 312, 808, 232, 776, 160, 728, 96, 664, 48, 592, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet"]
visible = false
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="Planet"]
texture = ExtResource( 1 )
texture_scale = 6.0
energy = 1.5
shadow_color = Color( 0.0117647, 0, 0.054902, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, -184 )

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2( 0, 321 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource( 2 )

[node name="Timer1" type="Timer" parent="SpawnArea"]
autostart = true

[node name="SpawnArea2" type="Area2D" parent="."]
position = Vector2( 1025, 321 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea2"]
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="SpawnArea2"]
autostart = true

[node name="OrbitalArea" type="Area2D" parent="."]
position = Vector2( 520, 248 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrbitalArea"]
position = Vector2( 0, 70 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="OrbitalArea"]
modulate = Color( 0, 0.0235294, 0.133333, 1 )
position = Vector2( 5.81741e-05, 72 )
scale = Vector2( 4.64, 4.6 )
z_index = -1
texture = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Lives" type="Label" parent="CanvasLayer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 203.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 5 )
text = "Lives : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WIN" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 415.0
margin_top = 272.0
margin_right = 656.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.898039, 0.0745098, 1 )
text = "WIN !!!!!! YAYY!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="CanvasLayer"]
margin_left = 64.0
margin_top = 105.0
margin_right = 203.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 5 )
text = "Ammo : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoNos" type="Label" parent="CanvasLayer"]
margin_left = 208.0
margin_top = 104.0
margin_right = 347.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="CanvasLayer"]
margin_left = 64.0
margin_top = 144.0
margin_right = 203.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 5 )
text = "Time :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="Label" parent="CanvasLayer"]
margin_left = 202.0
margin_top = 144.0
margin_right = 250.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sec" type="Label" parent="CanvasLayer"]
margin_left = 259.0
margin_top = 144.0
margin_right = 307.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msec" type="Label" parent="CanvasLayer"]
margin_left = 315.0
margin_top = 144.0
margin_right = 363.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesNos" type="Label" parent="CanvasLayer"]
margin_left = 208.0
margin_top = 64.0
margin_right = 347.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AudioTimer1" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="SpawnArea/Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="SpawnArea2/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_exited" from="OrbitalArea" to="." method="_on_OrbitalArea_body_exited"]
[connection signal="timeout" from="AudioTimer1" to="." method="_on_AudioTimer1_timeout"]
